# kweker

./: .gitignore  .gitmodules  CMakeLists.txt  JP-C_codestyle.xml  Makefile  sdkconfig.defaults
components/am2301/: AM2301.adoc  AM2301.cpp  AM2301.h  AM2301_interface.adoc  AM2301_states.plantuml  CMakeLists.txt
components/do/: CMakeLists.txt  DO.cpp  DO.h
components/ds3234/: CMakeLists.txt  DS3234.adoc  DS3234.cpp  DS3234.h
components/led/: CMakeLists.txt  LED.cpp  LED.h
components/mcp23s17/: CMakeLists.txt  MCP23S17.adoc  MCP23S17.cpp  MCP23S17.h  component.mk
components/mhz19b/: CMakeLists.txt  MH-Z19B.adoc  MHZ19B.cpp  MHZ19B.h
components/nvs/: CMakeLists.txt  NVS.cpp  NVS.h
components/pubsub/: CMakeLists.txt  pubsub.c  pubsub.h  pubsub_test.c  pubsub_test.h
doc/: 3rdparty.adoc  HDR-60-5.adoc  SSR-10-DA.adoc  control_wiring.adoc  controller.adoc  kweker.adoc  layout.adoc  mains_wiring.adoc
main/: CMakeLists.txt  Callback.h  GUI.cpp  GUI.h  HDR-60-5.adoc  Kconfig.projbuild  SSR-10-DA.adoc  bind.c  bind.h  bind_control.c  bind_control.h  bind_settings.c  bind_settings.h  binding.h  callback.h  component.mk  control_wiring.adoc  controller.adoc  controller.c  ctrl.c  ctrl.h  ctrl_auto.c  ctrl_auto.h  ctrl_circadian.c  ctrl_circadian.h  ctrl_day_night.c  ctrl_day_night.h  ctrl_manual.c  ctrl_manual.h  ctrl_off.c  ctrl_off.h  hardware.adoc  hmi.c  hmi.h  hmi_about.c  hmi_about.h  hmi_control.c  hmi_control.h  hmi_datespinner.c  hmi_datespinner.h  (+14 more)
